# factori

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
factori-impl/: Cargo.toml
factori-impl/src/: create.rs  define.rs  lib.rs  utils.rs
src/: create.rs  define.rs  lib.rs
tests/: builder.rs  import.rs  multiple.rs  simple.rs
