[package]
name = "factori"
version = "0.0.3"
description = "A factory library for Rust, inspired by FactoryBot. 🤖"
license = "MIT"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
repository = "https://github.com/mjkillough/factori"
keywords = ["factory", "testing", "test", "fixture"]
categories = ["development-tools::testing"]
readme = "README.md"

[badges]
travis-ci = { repository = "mjkillough/factori", branch = "master" }


[dependencies]
mashup = "0.1"
