[package]
name = "factori"
version = "1.0.0"
description = "A factory library for Rust, inspired by FactoryBot. 🤖"
license = "MIT"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
repository = "https://github.com/mjkillough/factori"
keywords = ["factory", "testing", "test", "fixture"]
categories = ["development-tools::testing"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "mjkillough/factori", branch = "master" }

[dependencies]
factori-impl = { version = "1.0.0", path = "./factori-impl" }
proc-macro-hack = "0.5"
proc-macro-nested = "0.1"
