[package]
name = "factori-impl"
version = "1.1.0"
description = "You shouldn't use this crate directly. It's internal to factori."
license = "MIT"
repository = "https://github.com/mjkillough/factori"
keywords = ["factory", "testing", "test", "fixture"]
categories = ["development-tools::testing"]
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.8"
proc-macro2 = "0.4"
proc-macro-rules = "0.2"
quote = "0.6"
syn = "0.15"
