[package]
name = "factori-impl"
version = "1.1.0"
description = "You shouldn't use this crate directly. It's internal to factori."
license = "MIT"
repository = "https://github.com/mjkillough/factori"
keywords = ["factory", "testing", "test", "fixture"]
categories = ["development-tools::testing"]
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.9"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

